# rsqlite

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yml
src/: lib.rs  main.rs  table.rs
