[package]
name = "rsqlite"
version = "0.1.0"
authors = ["chansuke <moonset20@gmail.com>"]
description = "Sqlite clone in Rust"
edition = "2018"
repository = "https://github.com/chansuke/rsqlite"
readme = "README.md"
categories = ["command-line-utilities", "database"]
keywords = ["cli", "database"]

[dependencies]
structopt = "0.3.21"
rustyline = "7.1.0"
thiserror = "1.0"
anyhow = "1.0"
